# coinbase-agentkit-legends-of-champz

./: .gitignore  README.md  pyproject.toml
coinbase_agentkit_legends_of_champz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: demo_agent.py  join_cycle.py  register_only.py
legends_of_champz_agentkit/: __init__.py  action_provider.py  registration.py  schemas.py
